--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.5",
+    "@tabler/icons-react": "^3.31.0",
     "lucide-react": "^0.479.0",
     "mongoose": "^8.12.1",
     "next": "15.2.1",
