--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@clerk/nextjs": "^6.12.5",
     "@tabler/icons-react": "^3.31.0",
+    "@tanstack/react-query": "^5.68.0",
     "lucide-react": "^0.479.0",
     "mongoose": "^8.12.1",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
