--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "mongoose": "^8.12.1",
     "next": "15.2.1",
     "react": "^19.0.0",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.16.0",
+    "react-switch": "^7.1.0",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
